--- a/Zadanie1/package.json
+++ b/Zadanie1/package.json
@@ -13,9 +13,14 @@
     "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-react": "^7.29.4",
+    "postcss": "^8.4.12",
+    "postcss-modules": "^4.3.1",
     "prettier": "2.6.0"
   },
   "dependencies": {
-    "parcel": "^2.3.2"
+    "parcel": "^2.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
