--- a/Zadanie1/package.json
+++ b/Zadanie1/package.json
@@ -1,7 +1,6 @@
 {
   "name": "zadanie1",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "parcel ./src/index.html",
@@ -21,6 +20,8 @@
   "dependencies": {
     "parcel": "^2.3.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  }
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
+  },
+  "description": ""
 }
